[project]
name = "nisarhdf"
version = "0.1.0"
description = "Tools for NISAR GPS cal/val data"
authors = [
    { name = "Ian Joughin", email = "irj@uw.edu" },
    { name = "Scott Henderson", email = "3924836+scottyhq@users.noreply.github.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["SAR", "NISAR"]
requires-python = ">=3.8"

dependencies = [
    "boto3",
    "h5py",
    "geojson",
    "geopandas",
    "gdal",
    "matplotlib",
    "psutil",
    "pyproj",
    "rioxarray",
    "s3fs",
    "scipy"
]

[project.scripts]
nisarh5toimage = "nisarhdf.nisarH5ToImage:run"
multilookrslc = "nisarhdf.multilookRSLC:run"
s3ls = "nisarhdf.s3Listing:run"

[project.urls]
repository = "https://github.com/fastice/nisarhdf"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
boto3 = "*"
h5py = "*"
geojson = "*"
geopandas = "*"
gdal = "*"
matplotlib = "*"
pyproj = "*"
psutil = "*"
rioxarray = "*"
s3fs = "*"
scipy = "*"

[tool.pixi.pypi-dependencies]
nisarhdf = { path = ".", editable = true }

[tool.pixi.tasks]
test="nisarh5toimage"

[tool.pixi.package]
name = "nisarhdf"
version = "0.1.0"

[tool.pixi.package.build.backend]
name = "pixi-build-python"
version = "==0.3.2"

[tool.pixi.package.host-dependencies]
hatchling = "*"

[tool.pixi.package.run-dependencies]
boto3 = "*"
h5py = "*"
geojson = "*"
geopandas = "*"
gdal = "*"
matplotlib = "*"
pyproj = "*"
psutil = "*"
rioxarray = "*"
s3fs = "*"
scipy = "*"
